fix layout problems on small screens

--- a/styles.css
+++ b/styles.css
@@ -16,19 +16,20 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  gap: 5rem;
-  justify-content: center;
+  gap: 2rem;
+  justify-content: flex-start;
   align-items: center;
   background-image: url(https://i.ibb.co/9rFf0XJ/Screenshot-2024-12-07-at-6-00-23-PM.png);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  width: 100vw;
-  max-width: 100vw;
-  max-height: 100vh;
+  min-height: 100vh;
+  min-width: 100vw;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .main-heading {
+  padding-top: 3rem;
   font-size: 5rem;
   color: #fdbd01;
 }
@@ -72,12 +73,10 @@ body {
   justify-content: center;
   gap: 3rem;
   padding: 6rem;
-  height: 60%;
-  width: 70%;
-  min-width: 380px;
-  min-height: 512px;
-  max-height: 90vh;
-  max-width: 90vw;
+  width: 95%;
+  height: 70vh;
+  max-height: 90%;
+  max-width: 95%;
   background-color: var(--pokemon-cards-container-bg-color);
   border-radius: 3rem;
   overflow-y: scroll;
@@ -136,15 +135,15 @@ body {
 }
 
 #pokemon-sprite {
-  height: 280px;
+  height: 250px;
   width: 300px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 #sprite {
   height: 160px;
   width: 160px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .pokemon-details {
@@ -153,10 +152,9 @@ body {
   justify-content: space-between;
   padding-top: 2rem;
   align-items: center;
-  width: 20%;
-  min-width: 360px;
-  height: 80%;
-  min-height: 512px;
+  width: 500px;
+  height: 500px;
+  height: 50%;
   background-color: #f6bd21;
   border: 2px solid #000;
   box-shadow: 2px 2px 10px #000;
@@ -174,23 +172,27 @@ body {
 }
 
 .pokemon-stats-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   width: 100%;
-  height: 50%;
-  max-width: 100%;
-  max-height: 50%;
+  height: 100%;
   background-color: #fff;
   border-radius: 4rem;
+  padding: 2rem;
 }
 
 .pokemon-stats-container h2 {
   font-size: 2.5rem;
-  margin: 1.5rem 0;
+  width: 100%;
+  max-width: 100%;
 }
 
 .pokemon-stats-container p {
   font-size: 1.8rem;
-  margin-bottom: 0.3rem;
+  padding: 0.2rem;
 }
 
 .back-button-container {
@@ -202,10 +204,13 @@ body {
 .back-button {
   display: flex;
   justify-content: center;
-  min-width: 8rem;
-  min-height: 3rem;
+  align-items: center;
+  min-width: 10rem;
+  min-height: 4rem;
   font-size: 2rem;
   border-radius: 1rem;
+  background-color: #f6bd21;
+  font-weight: bold;
 }
 
 .back-button:hover {
@@ -217,19 +222,53 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1;
 }
 
 @media (max-width: 600px) {
-  .pokemon-details {
-    width: 95%;
-    height: 95%;
-    max-height: 95vh;
-    max-width: 95vw;
-    overflow: hidden;
+  .pokemon-name {
+    font-size: 2rem;
   }
-  .body {
-    padding-top: 2rem;
+
+  .pokemon-cards-container {
+    max-width: 100%;
+    max-height: 55vh;
+    padding: 0;
+    padding: 1rem 0;
+  }
+
+  .pokemon-details {
+    width: 95vw;
+    height: 80vh;
+  }
+  .pokemon-stats-container {
+    height: 50%;
+  }
+
+  .pokemon-stats-container p {
+    font-size: 1.5rem;
+  }
+
+  .pokemon-stats-container h2 {
+    font-size: 2rem;
+    margin: 0.5rem 0;
+    width: 100%;
+    max-width: 100%;
+    justify-content: center;
+  }
+
+  #pokemon-name {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  #pokemon-sprite {
+    height: 180px;
+    object-fit: contain;
+  }
+  .pokemon-type {
+    font-size: 1.6rem;
   }
 }
